# band_geant_standalone

./: CMakeLists.txt  README.md  crossdis.cpp  crossincl2.cpp  deuteronwf.h  dis_CLAS12.cpp  dis_CLAS12_2d.cpp  dis_HallC.cpp  dis_HallC_2d.cpp  eep_CLAS12.cpp  inclusive_CLAS12.cpp  inclusive_HallC.cpp  isotropic_CLAS12.cpp  randoms_CLAS12.cpp  randoms_HallC.cpp
analysis/: CMakeLists.txt  makeHists.cpp  make_res_hists.cpp  reconstructions.cpp
band_geant/: digitize.cpp  geant_sim.cpp
band_geant/analysis/: CMakeLists.txt  combineFiles.cpp  combineHists.cpp  digitize.cpp  f2.cpp  finalHists.cpp  geometry.cpp  kinematicVars.cpp  makeHists.cpp  peakToTail.cpp  reconstructions.cpp  resHists.cpp  resolutions.cpp  study_geantThreshold.cpp  tomography.cpp
band_geant/include/: NeutronHallBTrackerSD.h
band_geant/src/: NeutronHallBDetectorConstruction.cpp  NeutronHallBDetectorConstruction_BAND.cpp  NeutronHallBEventAction.cpp  NeutronHallBPrimaryGeneratorAction.cpp  NeutronHallBTrackerSD.cpp
band_toyMC/: CMakeLists.txt  ajalysis.cpp  det_sim.cpp  make_res_hists.cpp
cmake_modules/: FindROOT.cmake
cross_sections/: CMakeLists.txt  sigmaep_bound.cpp
detector_sim/: CMakeLists.txt  create_lookup.py  debug.py  det_sim.cpp  digitize.cpp  geant_sim.cpp  model_bar.py  pmt_res.py
detector_sim/include/: NeutronHallBActionInitialization.h  NeutronHallBDetectorConstruction.h  NeutronHallBEventAction.h  NeutronHallBTrackerSD.h
detector_sim/src/: NeutronHallBActionInitialization.cpp  NeutronHallBDetectorConstruction.cpp  NeutronHallBEventAction.cpp  NeutronHallBPrimaryGeneratorAction.cpp  NeutronHallBRunAction.cpp  NeutronHallBTrackerHit.cpp  NeutronHallBTrackerSD.cpp
include/: constants.h  crossdis.h  deuteronwf.h  gen_tree.h  prop_tree.h  recon_tree.h  sigmaep_bound.h
lad_sim/: CMakeLists.txt  lad_analysis.cpp  lad_digi.cpp  lad_helpers.cpp  lad_optimize.cpp  lad_sim.cpp
lad_sim/include/: lad_helpers.h
tree/: CMakeLists.txt  LinkDef.h  prop_tree.cpp
wim_lib/: CMakeLists.txt  crossdis.cpp  crossincl.cpp  deuteronwf.cpp
